Update commit language for helm chart action

--- a/actions/update-helm-chart/action.yaml
+++ b/actions/update-helm-chart/action.yaml
@@ -105,7 +105,7 @@ runs:
         git config user.name "${{ inputs.git_user_name }}"
         git config user.email "${{ inputs.git_user_email }}"
         git add -A
-        git commit -m "chore: update ${APP_NAME} chart to ${APP_VERSION}"
+        git commit -m "update ${APP_NAME} chart to ${APP_VERSION}"
       shell: bash
 
     - name: Push branch
